bk_ida/gccida/g2/get_set_constructor_bits
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5151:1: error: use of undeclared identifier 'rtunion'; did you mean 'union'?
rtunion v4; // rdx 
^~~~~~~
union
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5155:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5168:1: error: must use 'union' tag to refer to type 'v4'
v4.rtwint = ( __int64)init->common.type->int_cst.rtl[6].fld[0]; 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5168:3: error: expected identifier or '('
v4.rtwint = ( __int64)init->common.type->int_cst.rtl[6].fld[0]; 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5169:22: error: use of undeclared identifier 'v4'
if ( ( *( _DWORD *)( v4.rtwint + 16) & 0x800FF) != 25 ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5172:20: error: use of undeclared identifier 'v4'
v5 = *( _QWORD *)( v4.rtwint + 40); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5177:20: error: use of undeclared identifier 'v4'
v6 = *( _QWORD *)( v4.rtwint + 32); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5178:46: error: use of undeclared identifier 'v4'
if ( v6 >= 0 || ( *( _BYTE *)( *( _QWORD *)( v4.rtwint + 8) + 17LL) & 0x20) != 0 ) 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5183:20: error: use of undeclared identifier 'v4'
v6 = *( _QWORD *)( v4.rtwint + 32); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5201:12: error: expected expression
*( _OWORD *)( v9 + 8) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5201:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v9 + 8) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5206:19: error: expected expression
v8 = ( tree_node *)v9; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/tree.c:5206:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)v9; 
       ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_set_constructor_bits/src/obj/tree.o] Error 1
